
2005-01-26  Bryan Bulten <bryan@bulten.ca>

	* Added new icons created by Nick Rusnov.

2005-01-23  Bryan Bulten <bryan@bulten.ca>

	* Instantiate appropriate plugin class from PluginManager.  Added
	PluginArray for storing a list of plugins.

2005-01-20  Bryan Bulten <bryan@bulten.ca>

	* Added --enable-testing for running PhotoTool from the build directory.
	Still need to figure out how other projects handle this.

	* Moved some things around (wxd, images => share/phototool), created
	plugins/tester for future plugins.

2005-01-18  Bryan Bulten <bryan@bulten.ca>

	* Added XRC-based photo edit panel.  Implemented black and white
	convertor.

	* Implemented photo edit viewer.  Scales image to fit in window.

	* Added splash screen to make load times seem less obvious.

2005-01-16  Bryan Bulten <bryan@bulten.ca>

	* Fixed bug in drag and drop that resulted from changing the photo storage
	mechanism.  Still need to handle database photo duplicates.

2005-01-13  Bryan Bulten <bryan@bulten.ca>

	* Changed photo storage to use <base>/YYYY/MM/DD/HH-mm-ss as the base
	location for storing images, thumbnails, and working copies.  This will
	make it easier to find photos outside of PhotoTool, and faster for
	applications/operating systems that can't handle a large number of files
	in a directory.

	* Updated PhotoDialog to move the image files when the taken date is
	changed.

2005-01-09  Bryan Bulten <bryan@bulten.ca>

	* Added wxExifList and MetadataDialog for viewing exif metadata.

	* Re-vamped some of the icons to make their purpose a little clearer.

2005-01-08  Bryan Bulten <bryan@bulten.ca>

	* Added wxExif, a class for retrieving file exif information.  Loads
	metadata into a hash, no editing support provided yet.

2005-01-07  Bryan Bulten <bryan@bulten.ca>

	* Created new icons using InkScape.  Icons are in SVG format, and were
	converted to XPM.  Eventually these icons should be redone by someone with
	a little more skill ;-) .
